# zabbix-sender-async

./: README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: python-app.yml
tests/: test_itemdata.py  test_packet.py  test_payload.py  test_response_header.py  test_response_payload.py  test_send.py
zabbixasync/: sender.py
